--- a/src/main/resources/microscope.css
+++ b/src/main/resources/microscope.css
@@ -34,16 +34,25 @@
 
 .collapsible {
   cursor: pointer;
-  padding: 18px;
+  padding: 1em;
   width: 100%;
   border: none;
   text-align: left;
   outline: none;
   font-size: 15px;
+  border-top-right-radius: 1em;
+  border-top-left-radius: 1em;
+  border-bottom-right-radius: 1em;
+  border-bottom-left-radius: 1em;
+}
+
+.active {
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
 }
 
 .collapsible.period {
-  background-color: var(--color-primary-2);
+  background-color: var(--color-primary-0);
   color: white;
 }
 
@@ -52,7 +61,7 @@
 }
 
 .collapsible.event {
-  background-color: var(--color-secondary-1-2);
+  background-color: var(--color-secondary-1-0);
   color: white;
 }
 
@@ -61,7 +70,7 @@
 }
 
 .collapsible.scene {
-  background-color: var(--color-secondary-2-2);
+  background-color: var(--color-secondary-2-0);
   color: white;
 }
 
@@ -69,13 +78,34 @@
   background-color: var(--color-secondary-2-3);
 }
 
-
 .content {
-  padding: 0 18px;
+  padding: 0 1em;
   display: none;
   overflow: hidden;
-  background-color: #f1f1f1;
+  border-style: solid;
+  border-left-width: .25em;
+  border-bottom-width: .25em;
+  border-right-width: .25em;
+  border-top-width: 0em;
+  border-bottom-right-radius: 1em;
+  border-bottom-left-radius: 1em;
 }
 
+.content.period {
+    border-color: var(--color-primary-3)
+}
+
+.content.event {
+    border-color: var(--color-secondary-1-3)
+}
+
+.content.scene {
+    border-color: var(--color-secondary-2-3)
+}
+
+.card {
+    margin-top:.5em;
+    margin-bottom:.5em;
+}
 
 
